# ALX-precourse

./: README1.md
project-{topic}-advanced/: .env  .env.example  .gitignore  .sequelizerc  API.md  API_DOCS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  END FILE  PERFORMANCE_TESTING.md  README.md  app.py  artillery.yml  build.sh  chat_server.cpp  chat_server.h  conanfile.txt  config.py  database.cpp  database.h  db.js (Database Interaction)  docker-compose.test.yml  docker-compose.yml  file_1774182121623.txt  index.js (Server Core)  init-multiple-databases.sh  jest.config.ts  k6_performance_test.js  load-test.js  main.cpp  manage.py  nginx.conf  package.json  perf_test_plan.md  pom.xml  (+5 more)
project-{topic}-advanced/api-docs/: openapi.yaml
project-{topic}-advanced/app/: __init__.py  cli.py  config.py  database.py  extensions.py  models.py  routes.py
project-{topic}-advanced/backend/: .env.example  .eslintrc.js  .gitignore  .sequelizerc  Dockerfile  README.md  app.py  docker-compose.test.yml  jest.config.integration.ts  jest.config.js  jest.config.unit.ts  openapi.yaml  ormconfig.ts  package.json  pom.xml  swagger.yaml  test_app.py  tsconfig.json
project-{topic}-advanced/chat-app-backend/: Dockerfile  pom.xml
project-{topic}-advanced/chat-app-frontend/: .env.example  Dockerfile  package.json
project-{topic}-advanced/client/: Dockerfile.client  index.html  jest.config.ts  package.json
project-{topic}-advanced/config/: .env.example  config.js  database.js  default.json  swagger.js
project-{topic}-advanced/db/: schema.sql  seed.sql
project-{topic}-advanced/docker/: docker-compose.yml
project-{topic}-advanced/docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md  api.md  architecture.md  deployment.md  postman_collection.json
project-{topic}-advanced/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
project-{topic}-advanced/inference-service/: Dockerfile  app.py  requirements.txt
project-{topic}-advanced/k6/: performance-test.js  users.json
project-{topic}-advanced/migrations/: 00000000000000-create-users-table.js  00000000000001-create-tokens-table.js  00000000000002-create-merchants-table.js  00000000000003-create-transactions-table.js  alembic.ini  env.py  (+6 more)
project-{topic}-complete/: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  API.md  API_DOCS.md  ARCHITECTURE.md  AuthenticationController.java  CMakeLists.txt  CMakeLists.txt (root)  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  END FILE  Jenkinsfile  README.md  User.java  alembic.ini  app.py  authMiddleware.ts  conanfile.txt  config.json  config.json.example  db.js  db.ts  docker-compose.yml  docker-entrypoint.sh  errorHandler.ts  file_1773025461170.txt  file_1773025461172.txt  file_1773025461174.txt  file_1773025461175.txt  file_1773370916090.txt  file_1773370916091.txt  file_1774062234703.txt  file_1776202514572.txt  file_1778323835434.txt  index.js  (+21 more)
project-{topic}-enhanced/: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  API.md  API_DOCS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION.md  AuthController.java  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Dockerfile (backend)  Dockerfile (frontend)  Dockerfile.backend  Dockerfile.frontend  END FILE  PERFORMANCE_TESTS.md  README.md  User.java  UserRepository.java  alembic.ini  api.cpp  app.js  app.py  app.py (Core Application)  application.properties  artillery-performance-test.yml  artillery-processor.js  database.cpp  database.h  docker-compose.test.yml  docker-compose.yml  file_1772658246240.txt  file_1775128299549.txt  file_1775128299550.txt  file_1775128299551.txt  file_1775128299552.txt  (+25 more)
project-{topic}-optimized/: .env  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  API.md  API_DOCS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Doxyfile  END FILE  HousePrice.java  HousePriceController.java  HousePriceRepository.java  PERFORMANCE_TESTING.md  README.md  Task.java  TaskController.java  TaskRepository.java  alembic.ini  api.cpp (Conceptual - requires a web framework)  api.h  app.py  app.py (Core Application)  architecture.md  artillery.yml  authMiddleware.js (Example Authentication Middleware)  config.json  config.py  database.cpp  database.h  db.js (Database interaction)  deployment.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  (+28 more)
project-{topic}-plus/: .dockerignore  .env  .env.example  .flaskenv  .gitignore  API.md  API_DOCS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION.md  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  END FILE  Jenkinsfile  PERFORMANCE_TESTS.js  README.md  alembic.ini  app.py  architecture.md  config.json  config.py  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  file_1774356386899.txt  file_1774356386900.txt  file_1777950232152.txt  file_1780200562139.txt  index.ts  locustfile.py  main.py  manage.py  ormconfig.json  package.json  (+8 more)
project-{topic}-pro/: (Simplified) Frontend (React Example)  .dockerignore (Backend)  .dockerignore (Frontend)  .env  .env.example  .gitignore  .gitlab-ci.yml  API.md  API_DOCS.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Dockerfile (Backend)  Dockerfile (Frontend)  Dockerfile (backend)  Dockerfile (frontend)  Dockerfile.backend  Dockerfile.client  Dockerfile.frontend  Dockerfile.server  END FILE  Product.java  ProductController.java  README.md  alembic.ini  api_docs.md  app.py  app.py (Backend - Flask)  app.py (Core Application - Backend)  app.py (Core Application)  app.py (Flask backend)  architecture.md  artillery_config.yml  auth.js (Authentication Middleware - Example)  config.py  db.js (Database Layer - Example)  deployment.md  deployment_guide.md  docker-compose.yml  (+27 more)
(+6599 files in other folders)
